# hello-cookiecutter

./: cookiecutter.json
test_data_proj/: .gitignore  Dockerfile  requirements.txt
{{cookiecutter.project_slug}}/: .dockerignore  .gitattributes  .gitignore  app.py  cookiecutter.json  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/Docker/: Dockerfile
